gifs added, reset button

--- a/memory-game.css
+++ b/memory-game.css
@@ -1,37 +1,39 @@
 /* you can add to or change this. */
 body {
   margin: 30px 30px;
-  background-color: beige;
-  background-size:auto;
-  
+  background-color: rgba(253, 239, 170, 0.284);
+  background-size: cover;
+  background-position: center;
 }
 
 #game div {
-  width: 200px;
-  height: 150px;
-  margin: 20px;
+  width: 160px;
+  height: 120px;
+  margin: 20px 28px 20px 35px;
   display: inline-block;
   background-color: black;
   background-image: url("images/grumpy-cat.jpeg");
   background-size: cover;
   background-position: center;
-  box-shadow: 0 0 10px 5px rgba(1, 1, 1, 0.688);  
+  box-shadow: 0 0 10px 5px rgba(1, 1, 1, 0.688); 
+  opacity: 80%; 
 }
 
 #game div:hover {
   box-shadow: 0 0 10px 5px rgba(1, 1, 1, 0.499);
+  opacity: 100%;
 }
 
 h1, #score {
   font-family: 'Slackey', cursive;
-  font-size: 60px;
+  font-size: 30px;
   text-align: center;
   text-shadow:1px 1px 10px rgb(236, 197, 197), 1px 1px 10px #ccc;
 }
 
 #score {
-  color: rgb(223, 65, 47);
-  text-shadow:1px 1px 10px rgb(21, 18, 16), 1px 1px 10px rgb(216, 177, 177);
+  color: rgb(191, 47, 31);
+  text-shadow:1px 1px 10px rgba(21, 18, 16, 0.393), 1px 1px 10px rgb(216, 177, 177);
   margin: 20px 20px;
   
 }
@@ -40,8 +42,8 @@ h1, #score {
   display: block;
   visibility: visible;
   margin: auto;
-  margin-top: 40px;
-  height: 80px;
+  margin-top: 20px;
+  height: 70px;
   width: auto;
   font-size: 20px;
   font-family: 'Slackey', cursive;
@@ -49,9 +51,12 @@ h1, #score {
   background-color: aliceblue;
   border-radius: 15px;
   padding: 1px 10px;
-  box-shadow: 2px 2px rgba(245, 245, 245, 0.295)  ;
+  box-shadow: 2px 2px rgba(245, 245, 245, 0.295) ;
 
 }
 
-
+[name="matched"] {
+  width: 120px;
+  height: 90px;
+}
 
