hid reset button

--- a/memory-game.css
+++ b/memory-game.css
@@ -40,7 +40,7 @@ h1, #score {
 
 #button {
   display: block;
-  visibility: visible;
+  visibility: hidden;
   margin: auto;
   margin-top: 20px;
   height: 70px;
