--- a/memory-game.css
+++ b/memory-game.css
@@ -52,6 +52,10 @@ h1, #score {
   border-radius: 15px;
   padding: 1px 10px;
   box-shadow: 2px 2px rgba(245, 245, 245, 0.295) ;
-
+  opacity: 80%;
 }
 
+#button:hover {
+  box-shadow: 2px 2px rgba(245, 245, 245, 0.295) ;
+  opacity: 100%;
+}
